# firewall-node

./: .aikido  .editorconfig  .gitattributes  .gitignore  .npmignore  .oxfmtrc.json  .prettierignore  .prettierrc  LICENSE  Makefile  README.md  aikidosec-safe-chain-1.0.0.tgz  codecov.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.ts  tsconfig.json  typedoc.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASE.md  SECURITY.md
apps/: docker-compose.yml
benchmark/: appWithGuard.js  appWithoutGuard.js  createApp.js  package.json  script.js
docs/: aws-batch.md  body-size.md  bundler.md  cloud-functions.md  elysiajs.md  esbuild.md  esm.md  express.md  fastify.md  generic-integration.md  generic-middleware.md  graceful-shutdown.md  h3.md  hapi.md  hono.md  idor-protection.md  invalid-sql-queries.md  koa.md  lambda.md  loopback4.md  markUnsafe.md  micro.md  nestjs.md  next.md  outbound-requests.md  prototype-pollution.md  proxy.md  pubsub.md  restify.md  set-token.md  ssrf.md  track.md  troubleshooting.md  user.md
end2end/: getFreePort.js  package-lock.json  package.json  run.js  timeout.js  waitOn.js
instrumentation-wasm/: .gitignore  Cargo.toml  build.ps1  build.sh
instrumentation-wasm/src/: lib.rs
instrumentation-wasm/src/js_transformer/: instructions.rs  mod.rs  transform_insert_sca.rs  transformer.rs  transformer_impl.rs  user_code_transformer.rs
instrumentation-wasm/src/js_transformer/helpers/: code_str_includes_instrument_funcs.rs  get_arg_names.rs  get_import_code_str.rs  get_method_arg_names.rs  get_name_str_for_member_expr.rs  insert_code.rs  insert_import_statement.rs  insert_instrument_method_calls.rs  insert_single_statement_into_func.rs  mod.rs  parse_js_code_to_statements.rs  select_sourcetype_based_on_enum.rs  transform_return_statements.rs
instrumentation-wasm/src/wasm_bindings/: mod.rs
legacy_docs/: prototype-pollution.md
lib/: bootstrap.ts  context.ts  fill.ts  index.ts  moduleExists.ts  start.ts  wrap.ts
library-next/: index.ts  package.json  tsconfig.json  types.ts
npm install @aikidosec/: firewall
sample-apps/: docker-compose.yml
(+674 files in other folders)
