[package]
name = "node_code_instrumentation"
version = "0.1.0"
edition = "2024"
authors = ["Aikido Security"]
description = "Internal library for JS code transformation"

[lib]
name = "node_code_instrumentation"
crate-type = ["cdylib", "rlib"]

[dependencies]
oxc_allocator = "0.102.0"
oxc_ast = "0.102.0"
oxc_codegen = "0.102.0"
oxc_parser = "0.102.0"
oxc_semantic = "0.102.0"
oxc_span = "0.102.0"
oxc_traverse = "0.102.0"
serde = "1.0.228"
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"

[profile.release]
strip = true
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]